src/test/ui/issues/10000-19999/issue-13482.stderr
error[E0527]: pattern requires 0 elements but array has 2
  --> $DIR/issue-13482.rs:4:5
   |
LL |     [] => None,
   |     ^^ expected 2 elements

error: aborting due to previous error

For more information about this error, try `rustc --explain E0527`.
